crates/vise/tests/ui/metrics/bogus_metric_name.rs
use vise::{Counter, Metrics};

#[derive(Debug, Metrics)]
struct TestMetrics {
    /// Test counter.
    счетчик: Counter,
}

fn main() {}
